--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">Academia FinMar</div>
+    <div class="logo">Smart Advicer</div>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
