--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Academia FinMar. Toate drepturile rezervate.</p>
+    <p>&copy; 2025 Smart Advicer. Toate drepturile rezervate.</p>
   </footer>
 </body>
 </html>
